Termina cuarta seccion

--- a/index.html
+++ b/index.html
@@ -158,7 +158,38 @@
                 Voluptatibus, distinctio suscipit? Atque modi ut, omnis est</p> 
            </div>
            <div class="fourth-right">
-               
+                <div class="boxing">
+                    <img class="img-boxing" src="assets/iconos/4-section/person.svg"/>
+                    <p class="boxing-title">PROFESSIONAL</p>
+                    <p class="boxing-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut elit tellus, luctus nec.
+                    </p>
+                </div>
+                <div class="boxing">
+                    <img class="img-boxing" src="assets/iconos/4-section/team.svg"/> 
+                    <p class="boxing-title">EXPERT TEAM</p>
+                    <p class="boxing-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut elit tellus, luctus nec.
+                    </p>
+                </div>
+                <div class="boxing">
+                    <img class="img-boxing" src="assets/iconos/4-section/engranaje.svg"/> 
+                    <p class="boxing-title">EXPERT SKILLS</p>
+                    <p class="boxing-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut elit tellus, luctus nec.
+                    </p>
+                </div>
+                <div class="boxing">
+                    <img class="img-boxing" src="assets/iconos/4-section/landscape.svg"/>
+                    <p class="boxing-title">THE RESULTS</p> 
+                    <p class="boxing-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ut elit tellus, luctus nec.
+                    </p>
+                </div>
            </div>
        </div>
     </section>
