--- a/index (Copia en conflicto de DESKTOP-L9REPQT 2021-08-11).html
+++ b/index (Copia en conflicto de DESKTOP-L9REPQT 2021-08-11).html
@@ -41,16 +41,17 @@
 
     <section class="main-section" id="Home">
         <div class="main-tittle">
-            <h2>Sebastian Zuluaga Becerra</h2>
-            <h1>Ingeniero <span>Mecanico</span></h1>
-            <nav class="social-nav">
-                <ul>
-                    <li><a href="#"><img src="assets/iconos/001-facebook.svg"/></a></li>
-                    <li><a href="#"><img src="assets/iconos/003-gorjeo.svg"/></a></li>
-                    <li><a href="#"><img src="assets/iconos/002-instagram.svg"/></a></li>
-                   
-                </ul>
-            </nav>
+            <div class="box-shadow">
+                <h2>Sebastian Zuluaga Becerra</h2>
+                <h1>Ingeniero <span>Mecánico</span></h1>
+                <nav class="social-nav">
+                    <ul>
+                        <li><a href="#"><img src="assets/iconos/001-facebook.svg"/></a></li>
+                        <li><a href="#"><img src="assets/iconos/003-gorjeo.svg"/></a></li>
+                        <li><a href="#"><img src="assets/iconos/002-instagram.svg"/></a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </section>
     
@@ -84,30 +85,30 @@
                         <li class="box-square">
                             <img class="img-boxes-square" src="assets/iconos/soldador.svg"/>
                             <div class="menace">
-                                <p class="menace-text">WELDING</p>
+                                <h2>WELDING</h2>
                                 <p class="text-boxes-square">Create an amazing work you need</p>
                             </div>
                         </li>
                         <li class="box-square">
                             <img class="img-boxes-square" src="assets/iconos/002-llave-inglesa.svg"/>
                             <div class="menace">
-                                <p class="menace-text">ASSEMBLY</p>
+                                <h2>ASSEMBLY</h2>
                                 <p class="text-boxes-square">Create an amazing work you need</p>
                             </div>
                         </li>
                         <li class="box-square">
                             <img class="img-boxes-square" src="assets/iconos/001-ajustes-de-engranajes.svg">
                             <div class="menace">
-                                <p class="menace-text">MECHANICS</p>
+                                <h2>MECHANICS</h2>
                                 <p class="text-boxes-square">Create an amazing work you need</p>
                             </div>
                         </li>
                     </ul>
                 </div>
                 <div class="right">
-                    <p class="right-p-1">ABOUT US</p>
-                    <p class="right-p-2">WHY CHOOSE US FOR YOU PROJECT ?</p>
-                    <p class="right-p-3">
+                    <h5>ABOUT US</h5>
+                    <h1>WHY CHOOSE US FOR YOU PROJECT ?</h1>
+                    <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                         Voluptatibus, distinctio suscipit? Atque modi ut, omnis est 
                         repellendus quae illo ducimus dolores ipsa, odit maxime quod 
@@ -194,7 +195,7 @@
        </div>
     </section>
     <section class="fifth-section">
-
+        <p></p>
     </section>
 </body>
 </html>
