--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>  
     <!-- Inicio header -->
-    <header>
+    <header id="main-header">
         <nav class="container row justify-between">
             <div class="logo col-2 d-flex justify-center align-center">
                 <img class="col-2" src="assets/iconos/003-letra-s.svg"/>
