Termine responsive 5 section y agregue 6 section

--- a/index.html
+++ b/index.html
@@ -193,43 +193,63 @@
            </div>
        </div>
     </section>
+
+<!----------------------------->
+<!------- FIFTH SECTION ------->
+<!----------------------------->
+
     <section class="fifth-section">
         <p class="referents">REFERENTS</p>
         <div  class="unique">
-           <div class="boxing-fifth-section imagen-1">
+            <div class="boxing-fifth-section imagen-1">
+                <p class="name-fifth">David Kalagh</p>
                 <div class="img-circle-1"></div>
                 <ul class="text-row">
                     <li class="l1">Teacher</li>
                     <li class="l2">Programer</li>
                     <li class="l3">Architect</li>
                 </ul>
-           </div>
-           <div class="boxing-fifth-section imagen-2">
+            </div>
+            <div class="boxing-fifth-section imagen-2">
+                <p class="name-fifth">Kayle Rusbell</p>
                 <div class="img-circle-2"></div>
                 <ul class="text-row">
                     <li class="l1">Teacher</li>
                     <li class="l2">Programer</li>
                     <li class="l3">Architect</li>
                 </ul>
-           </div>
-           <div class="boxing-fifth-section imagen-3">
+            </div>
+            <div class="boxing-fifth-section imagen-3">
+                <p class="name-fifth">Abraham Zalem</p>
                 <div class="img-circle-3"></div>
                 <ul class="text-row">
                     <li class="l1">Teacher</li>
                     <li class="l2">Programer</li>
                     <li class="l3">Architect</li>
                 </ul>
-           </div>
-           <div class="boxing-fifth-section imagen-4">
+            </div>
+            <div class="boxing-fifth-section imagen-4">
+                <p class="name-fifth">James & Nicole Jackson</p>
                 <div class="img-circle-4"></div>
                 <ul class="text-row">
                     <li class="l1">Teacher</li>
                     <li class="l2">Programer</li>
                     <li class="l3">Architect</li>
                 </ul>
-           </div>
+            </div>
         </div>
     </section>
+
+<!----------------------------->
+<!------- SIXTH SECTION ------->
+<!----------------------------->
+
+<section class="sixth-section">
+    <!-- <p>
+        Direcciones de correo electrónico: <input type="email" name="emails" multiple>
+        <input type="submit" value="Enviar datos">
+    </p> -->
+</section>
 
 <script src="assets/js/scroll.js"></script>
 </body>
