--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <!------- THIRD SECTION ------->
 <!----------------------------->
 
-    <section class="third-section">
+    <section class="third-section" id="third-section">
         <div class="first-part">
             <h5>OUR WORKS</h5>
             <p class="p-first">SELECTED PROJECT</p>
