--- a/index.html
+++ b/index.html
@@ -245,10 +245,20 @@
 <!----------------------------->
 
 <section class="sixth-section">
-    <!-- <p>
-        Direcciones de correo electrónico: <input type="email" name="emails" multiple>
-        <input type="submit" value="Enviar datos">
-    </p> -->
+    <div class="container-sixth">
+        <div class="sixth-left">
+            <p class="left-1">GET IN TOUCH</p>
+            <p class="left-2">SUBSCRIBE NOW</p>
+            <p class="left-3">Subscribe for free newsletter</p>
+        </div>
+        <div class="sixth-right">
+            <p>
+                Direcciones de correo electrónico: <input type="email" name="emails" multiple>
+                <input type="submit" value="Enviar datos">
+            </p>
+        </div>
+    </div>
+    
 </section>
 
 <script src="assets/js/scroll.js"></script>
