finalizacion 6 section y creacion de 7 y final section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
                         repellendus quae illo ducimus dolores ipsa, odit maxime quod 
                         blanditiis magni odio, aliquid sed.
                     </p>
-
                     <button>VIEW PROJECT</button>
                 </div>
             </div>
@@ -252,14 +251,29 @@
             <p class="left-3">Subscribe for free newsletter</p>
         </div>
         <div class="sixth-right">
-            <p>
-                Direcciones de correo electrónico: <input type="email" name="emails" multiple>
-                <input type="submit" value="Enviar datos">
-            </p>
+            <input size="1" type="email" name="form-field [email]" class="elementor-field"
+            placeholder="Email Address" required="required" aria-required="true">
+            <button type="submit" class="button-sixth">SUBSCRIBE</button>
         </div>
-    </div>
-    
+    </div>  
 </section>
+
+<!----------------------------->
+<!-------SEVENTH SECTION------->
+<!----------------------------->
+
+<section class="seventh-section">
+
+</section>
+
+<!----------------------------->
+<!------- FINAL SECTION ------->
+<!----------------------------->
+
+<section class="final-section">
+
+</section>
+
 
 <script src="assets/js/scroll.js"></script>
 </body>
