Termine 7 y final section con responsive

--- a/index.html
+++ b/index.html
@@ -263,7 +263,37 @@
 <!----------------------------->
 
 <section class="seventh-section">
-
+    <div class="container-seventh">
+        <div class="logo-seventh">
+            <img class="col-2" src="assets/iconos/003-letra-s.svg"/>
+            <img class="col-2" src="assets/iconos/002-letra-z.svg"/>
+            <img class="col-2" src="assets/iconos/001-letra-b.svg"/>
+        </div>
+        <p class="name-7">Sebastian Zuluaga Becerra</p>
+        <div class="second-container">
+            <div class="box-7">
+                <img class="img-box-7" src="assets/iconos/7-section/placeholder.svg"/>
+                <div class="info-7">
+                    <p class="title-7">Location :</p>
+                    <p class="general-7">Cerrera 34C # 1-75, Medellin, Colombia</p>
+                </div>
+            </div>
+            <div class="box-7">
+                <img class="img-box-7" src="assets/iconos/7-section/telephone.svg"/>
+                <div class="info-7">
+                    <p class="title-7">General Info :</p>
+                    <p class="general-7">+57 318 306 0760</p>
+                </div>
+            </div>
+            <div class="box-7">
+                <img class="img-box-7" src="assets/iconos/7-section/gmail.svg"/>
+                <div class="info-7">
+                    <p class="title-7">Email Address :</p>
+                    <p class="general-7">zuluaga776@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!----------------------------->
@@ -271,7 +301,7 @@
 <!----------------------------->
 
 <section class="final-section">
-
+    <p class="final-1">2021 Sebastian Zuluaga Becerra Mechanical Engineer   |   All Right Reserved</p>
 </section>
 
 
