--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="main-section" id="Home">
         <div class="main-tittle">
             <h2>Sebastian Zuluaga Becerra</h2>
-            <h1>Ingeniero <span>Mecanico</span></h1>
+            <h1>Ingeniero <span>Mecánico</span></h1>
             <nav class="social-nav">
                 <ul>
                     <li><a href="#"><img src="assets/iconos/001-facebook.svg"/></a></li>
@@ -275,7 +275,7 @@
                 <img class="img-box-7" src="assets/iconos/7-section/placeholder.svg"/>
                 <div class="info-7">
                     <p class="title-7">Location :</p>
-                    <p class="general-7">Cerrera 34C # 1-75, Medellin, Colombia</p>
+                    <p class="general-7">Carrera 34C # 1-75, Medellin, Colombia</p>
                 </div>
             </div>
             <div class="box-7">
@@ -305,6 +305,6 @@
 </section>
 
 
-<script src="assets/js/scroll.js"></script>
+
 </body>
 </html>
