--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
        <div class="upper">
            <div class="fourth-left">
               <p class="one-p">WHY CHOOSE US</p>
-              <p class="two-p">PROFESSIONAL PHOTOGRAPHY TEAM</p>
+              <p class="two-p">PROFESSIONAL MECHANICAL ENGINEER</p>
               <p class="three-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Voluptatibus, distinctio suscipit? Atque modi ut, omnis est</p> 
            </div>
